--- a/config/config.json
+++ b/config/config.json
@@ -9,5 +9,14 @@
 				}
 			}
 		}
+	},
+	"session": {
+		"secret": "bewilderment2013",
+		"key": "sid",
+		"cookie": {
+			"path": "/",
+			"httpOnly": true,
+			"maxAge": null
+		}
 	}
 }
