--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,27 @@
 {
-	"port": 8012,
-	"mongoose": {
-		"uri": "mongodb://localhost/meetings",
-		"options": {
-			"server": {
-				"socketOptions": {
-					"keepAlive": 1
-				}
-			}
+    "port": 8013,
+    "mongoose": {
+	"uri": "mongodb://localhost/meetings",
+	"options": {
+	    "server": {
+		"socketOptions": {
+		    "keepAlive": 1
 		}
-	},
-	"session": {
-		"secret": "bewilderment2013",
-		"key": "sid",
-		"cookie": {
-			"path": "/",
-			"httpOnly": true,
-			"maxAge": null
-		}
+	    }
 	}
+    },
+    "session": {
+	"secret": "bewilderment2013",
+	"key": "sid",
+	"cookie": {
+	    "path": "/",
+	    "httpOnly": true,
+	    "maxAge": null
+	}
+    },
+    "socket": {
+        "origins": "localhost:*",
+        "heartbeats": true,
+        "transports": ["websocket", "htmlfile", "xhr-polling", "jsonp-polling"]
+    }
 }
