--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "meetings",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "3.4.5",
-    "nconf": "*",
-    "mongoose": "*",
-    "connect-mongo": "*",
-    "async": "*",
-    "socket.io": "*"
-  }
+    "name": "meetings",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "express": "3.4.7",
+        "nconf": "*",
+        "mongoose": "*",
+        "connect-mongo": "*",
+        "async": "*",
+        "socket.io": "*",
+        "connect": "*",
+        "cookie": "*"
+    }
 }
