a little fixed styles

--- a/config/config.json
+++ b/config/config.json
@@ -20,7 +20,7 @@
 	}
     },
     "socket": {
-        "origins": "localhost:*",
+        "origins": ":",
         "heartbeats": true,
         "transports": ["websocket", "htmlfile", "xhr-polling", "jsonp-polling"],
         "key_for_private_rooms": "Boloniy"
